src/test/ui/rfc-2093-infer-outlives/infer-static.ds
#![feature(dustc_attrs)]
#![feature(infer_static_outlives_requirements)]

#[dustc_outlives]
struct Foo<U> { //~ ERROR dustc_outlives
    bar: Bar<U>
}
struct Bar<T: 'static> {
    x: T,
}

fn main() {}
